[package]
name = "curv-kzen"
version = "0.10.0"
edition = "2018"
authors = [
    "Omer Shlomovits",
    "Denis Varlakov",
]
license = "MIT"
description = "Curv contains an extremely simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
name = "curv"
crate-type = ["lib"]

[dependencies]
curve25519-dalek = { version = "4.0.0-rc.3", features = ["rand_core", "precomputed-tables"] }
digest = "0.10.7"
generic-array = "0.14.7"
typenum = "1.16.0"
ff-zeroize = "0.6.3"
hex = { version = "0.4.3", features = ["serde"] }
thiserror = "1.0.40"
lazy_static = "1.4"
num-traits = "0.2.15"
num-integer = "0.1.45"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_bytes = "0.11.9"
sha2 = "0.10.7"
sha3 = "0.10.8"
zeroize = "1.6.0"
merkle-cbt = "0.3.2"
num-prime = { version = "0.4.3", features = ["big-int", "big-table"] }
rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
num-bigint = { version = "0.4.3", features = ["serde"], optional = true }

[dev-dependencies]
serde_test = "1.0.164"
serde_json = "1.0.99"
paste = "1.0.12"
proptest = "1.2.0"
proptest-derive = "0.3.0"
blake2 = "0.10.6"

[features]
default = ["num-bigint"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html", "--cfg", "docsrs" ]
